fix: make sure editor doesn't go out of visible area for smaller screen widths

--- a/src/fields/LexicalRichText/index.scss
+++ b/src/fields/LexicalRichText/index.scss
@@ -52,6 +52,7 @@
 .editor {
   flex: auto;
   position: relative;
+  max-width: 100%;
 }
 
 .test-recorder-output {
